--- a/8-03.md
+++ b/8-03.md
@@ -18,7 +18,6 @@
     HAproxy должен балансировать только тот http-трафик, который адресован домену example.local
     На проверку направьте конфигурационный файл haproxy, скриншоты, где видно перенаправление запросов на разные серверы при обращении к HAProxy c использованием домена example.local и без него.
 
-Решение 2
+Решение 2 11
 
 При необходимости прикрепитe сюда скриншоты ![Название скриншота 2](ссылка на скриншот 2)
-
